--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
 </head>
 <body>
     <h1>User Directory</h1>
-    <button>Click Me</button>
-    <h1 id="dayHeading">Day 2</h1>
- <script src="index.js"></script> 
+
+    <form id="userForm">
+        <p>
+            <label for="userName">Name</label>
+            <input type="text" name="userName">
+        </p>
+        <button type="submit">Go</button>
+    
+    </form>
+
+
+
+
+    <script src="index.js"></script> 
 </body>
 </html>
