Get the input value via the event target

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <input type="text" name="userName">
         </p>
         <button type="submit">Go</button>
-    
+        <button type="reset">Clear</button>
     </form>
 
 
