--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <button type="reset">Clear</button>
     </form>
 
-<div id="users"></div>
+<div id="users">
+    
+</div>
 
 
     <script src="index.js"></script> 
