--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
             <label for="userName">Name</label>
             <input type="text" name="userName" autofocus>
         </p>
+    <p>
+        <label for="age">Age</label>
+        <input type="text" name="age">
+    </p>
+        
         <button type="submit">Go</button>
         <button type="reset">Clear</button>
     </form>
 
 <div id="users">
-    
+
 </div>
 
 
