--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         <label for="age">Age</label>
         <input type="number" name="age">
     </p>
-        
+     <p>
+         <label for="favoriteColor">Favorite Color </label>
+         <input type="text" name="favoriteColor">
+         </label>
+     </p>   
         <button type="submit">Go</button>
         <button type="reset">Clear</button>
     </form>
