--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </p>
      <p>
          <label for="favoriteColor">Favorite Color </label>
-         <input type="color" name="favoriteColor">
+         <input type="color" name="favoriteColor" value="#000000">
          </label>
      </p>   
         <button type="submit">Go</button>
