--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1>User Directory</h1>
 
-    <form id="userForm">
+    <main>
+        <form id="userForm">
         <p>
             <label for="userName">Name</label>
             <input type="text" name="userName" autofocus>
@@ -19,21 +20,23 @@
         <label for="age">Age</label>
         <input type="number" name="age">
     </p>
-     <p>
+        <p>
          <label for="favoriteColor">Favorite Color</label>
          <input type="color" name="favoriteColor" value="#000000">
          </label>
-     </p>   
-        <button type="submit">Go</button>
-        <button type="reset">Clear</button>
+        </p>   
+     <button type="submit">Go</button>
+     <button type="reset">Clear</button>
     </form>
 
 <div id="users">
 
 </div>
+</main>
 
 
 
     <script src="index.js"></script> 
 </body>
+
 </html>
